<resources>
    <string name="app_name">Course Freak</string>
    <string name="facebookLoginString">Continue with Facebook</string>
    <string name="googleLoginString">Continue with Google</string>
    <string name="hintEmailBox">E-mail</string>
    <string name="hintPasswordBox">Password</string>
    <string name="loginButtonString">Login</string>
    <string name="emailSignupString">Sign up with E-mail</string>
    <string name="guestContinueString">Continue as guest</string>
    <string name="signupFeaturesString_1">Sign up for course recommendations,</string>
    <string name="signupFeaturesString_2">reviews, and more!</string>
    <string name="title_activity_courses_tabs">CoursesTabs</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_courses">Courses</string>
    <string name="tab_text_1">Catalog</string>
    <string name="tab_text_2">Recommended</string>
    <string name="tab_text_3">Interested</string>
    <string name="courses">Courses</string>
    <string name="notSignUpString">Not signed up?</string>
    <string name="logoImageDesc">App logo</string>
    <string name="appMoto">CourseFreak, your academic assistant.</string>
    <string name="hintConfirmPassword">Confirm Password</string>
    <string name="signupButtonText">Sign up!</string>
    <string name="badPasswordMatchString">Passwords do not match!</string>
    <string name="badPasswordTooShort">Password is too short!</string>
    <string name="badEmailNotValid">E-mail address is not valid!</string>
    <string name="badLoginInfo">Email or password were incorrect.</string>
    <string name="aboutButtonDesc">Credits</string>
    <string name="aboutContentList">https://icons8.com/\nhttp://www.ourclipart.com/\nhttps://www.freepik.com/\nde.hdodenhof\n</string>
    <string name="title_activity_course_view">Course View</string>
    <string name="course_name">Algorithms 1</string>
    <string name="course_credit">3.0</string>
    <string name="courseView_spinner_title">Catalog categories</string>
    <string name="grade_avg">Average Grade</string>
    <string name="label_popularity">Popularity</string>
    <string name="label_exam">Exam</string>
    <string name="label_HW">Homework</string>
    <string name="label_partners">Pair Work</string>
    <string name="title_activity_partner_view">Partners</string>
    <string name="title_activity_courseview">Course Info</string>
    <string name="partner_switch_label">I\'m Looking For A Partner</string>
    <string name="title_activity_ugview">UG Website</string>
    <string-array name="app_credits">
        <item>https://icons8.com/</item>
        <item>http://www.ourclipart.com/</item>
        <item>https://www.freepik.com/</item>
        <item>de.hdodenhof</item>
        <item>https://github.com/ShantanuDeshpande/MF-Based-Recommendation</item>
    </string-array>
    <string name="logoutTitle">Logout</string>

    //Walkthrough
    <string name="NEXT">NEXT</string>
    <string name="GOT_IT">GOT IT</string>
    <string name="START">START TOUR</string>

    //Menu
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="HIDE">HIDE</string>
    <string name="SAVE">SAVE</string>
    <string name="title_activity_notification_test">NotificationTest</string>
</resources>

